fix: remove unwanted scrollbar style from profile name; align edit button with profile name

--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -29,6 +29,18 @@
     width: 24px;
     height: 24px;
 
+    transform: translateY(-8px);
+    /* This is used for alignment reasons to correspond to the specs. */
+    /* 
+      This can also be done using the following declarations:
+        position: relative;
+        top: -8px;
+        right: 0;
+
+      but I just chose to transform instead.
+    */
+
+
     background-size: 10px;
   }
 }
