--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,13 +1,11 @@
 .profile__name {
-  max-height: 22px;
   margin: 0;
 
   font-weight: 500;
   font-size: 22px;
   line-height: calc(27 / 22); /* 27px */
 
-  overflow: hidden visible;
-  /* overflow-y is visible as line-height is greater than element hight */
+  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   text-align: center; 
@@ -20,7 +18,6 @@
     /* not provided by specs, but helps ellipsis to be formed when
      user enters a name with many characters while maintaining edit
      button's position according to the specs. */
-    max-height: 39px;
     margin-right: 18px;
 
     font-size: 42px;
